--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+.header-color {
+  background: #59C173;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #5D26C1, #a17fe0, #59C173);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.landing-grid {
+  background: #59C173;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #5D26C1, #a17fe0, #59C173);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.avatar-img {
+  height:250px;
+  padding-top:5em;
+}
+
+.banner-text {
+  background-color:black;
+  opacity:.8;
+  width: 75%;
+  margin: auto;
+  border-radius:10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner-text h1 {
+font-size:66px;
+font-weight:bold;
+color:white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.banner-text hr {
+  border-top: 5px dotted white;
+  width: 50%;
+  margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.banner-text p {
   color: white;
+  font-size:20px;
+  padding:1em;
+
+}
+.social-links {
+  color:white;
+  display:flex;
+  justify-content: space-between; 
+  width: 50%;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.social-links i {
+  color: white;
+  font-size:6em;
+  padding:10px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
