--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,12 @@ background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+
   background: #59C173;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to bottom, #5D26C1, #a17fe0, #59C173);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to bottom, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+position: fixed;
+top: 0;
+left: 0; 
+width: 100%;
+height: 100%;
+text-align: center; 
 }
 
 .avatar-img {
